# nes_emulator

./: .gitignore  Cargo.toml  README.md  nes_rust_wasm_bg.wasm
core/: Cargo.toml
core/src/: apu.rs  cpu.rs  default_audio.rs  default_display.rs  default_input.rs  input.rs  joypad.rs  lib.rs  mapper.rs  memory.rs  ppu.rs  register.rs  rom.rs
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
